--- a/frontend/src/Bookshelf.css
+++ b/frontend/src/Bookshelf.css
@@ -2,14 +2,33 @@
 .bookshelf {
   padding: 20px 0px 0px 0px;
   /* Adjust padding to not affect the bottom */
-  background-color: #e1d3c3;
-  border: 10px solid #8b4513;
+  background-color: #594438;
+  /* border: 10px solid #8b4513; */
+  border: 25px solid transparent;
+  /* Define the border width */
+  border-image: url('./assets/wood-texture.jpeg') 40 stretch;
+  /* Image URL and settings */
   border-radius: 10px;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.15);
   margin: 20px;
   position: relative;
   /* Ensure bookshelf is the reference for positioning */
 }
+
+.image-background {
+  width: 100%;
+  /* Set the width of the div */
+  height: 100%;
+  /* Set the height of the div */
+  background-image: url('./assets/');
+  /* Image path */
+  background-size: cover;
+  /* Makes the image cover the entire div */
+  background-position: center;
+  /* Centers the image within the div */
+}
+
+
 
 /* Flex container for each row */
 .book-row {
@@ -31,11 +50,16 @@
 .shelf-line {
   position: absolute;
   width: 100%;
-  height: 6px;
-  background-color: #8b4513;
+  height: 10px;
+  background-color: #683008;
   bottom: -6px;
   left: 0;
+  border: none;
+  background-image: url('./assets/wood-texture.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
 }
+
 
 /* Make sure there's no gap below the last shelf line */
 .bookshelf .book-row:last-child .shelf-line {
@@ -44,7 +68,7 @@
 }
 
 /* Book card styling */
-.book-card {
+/* .book-card {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -56,7 +80,7 @@
   height: 140px;
   overflow: hidden;
   text-align: center;
-}
+} */
 
 /* Book cover image */
 .book-cover {
@@ -118,19 +142,6 @@
   /* Darker border on hover */
 }
 
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-  }
-
-  50% {
-    transform: scale(1.1);
-  }
-
-  100% {
-    transform: scale(1);
-  }
-}
 
 .book-card {
   overflow: hidden;
