--- a/frontend/src/styles/App.css
+++ b/frontend/src/styles/App.css
@@ -1,3 +1,6 @@
 .App {
-    background-color: #d2c3c3;
-}
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; /* Full viewport height */
+    background-color:#F0FFF0;
+  }
