Added Home Page, All books pages. Pdf viewer page works well and have 3 buttons

--- a/frontend/src/styles/Bookshelf.css
+++ b/frontend/src/styles/Bookshelf.css
@@ -129,3 +129,11 @@
 
 
 
+.bookshelf-title {
+  color: #2f0952; /* Set the text color to white */
+  text-align: center; /* Center the text horizontally */
+  margin-bottom: 30px; /* Add some space below the title */
+  font-size: 3rem; /* Optional: Adjust font size */
+  font-weight: bold; /* Optional: Make the text bold */
+
+}
