--- a/frontend/src/styles/PdfReader.css
+++ b/frontend/src/styles/PdfReader.css
@@ -3,17 +3,53 @@
   margin: 20px;
 }
 
+.book-info {
+  margin-bottom: 20px;
+}
+
+.book-info h2 {
+  margin: 0;
+  padding: 5px;
+  font-size: 2.5rem; /* Make the title larger */
+  font-weight: bold; /* Make the title bold */
+}
+
+.book-info h3 {
+  margin: 0;
+  padding: 5px;
+}
+
 .iframe-container {
-  position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: 150%; /* Aspect ratio (width:height) */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .iframe-container iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  border: none;
+  transition: all 0.3s ease;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+}
+
+.buttons-section {
+  display: flex;
+  justify-content: center; /* Center the buttons */
+  gap: 10px; /* Space between the buttons */
+}
+
+.button {
+  background-color: #36404b;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+  transition: background-color 0.3s ease;
+  width: 150px;
+}
+
+.button:hover {
+  background-color: #0056b3;
 }
