--- a/frontend/src/styles/HomePage.css
+++ b/frontend/src/styles/HomePage.css
@@ -1,8 +1,8 @@
 .home-welcome {
     text-align: center;
     margin-top: 20px;
-    color: #653a8e;
-    font-size: 3rem;
+    color: #1ea7ab;
+    font-size: 2rem;
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
