--- a/frontend/src/styles/BookCard.css
+++ b/frontend/src/styles/BookCard.css
@@ -82,3 +82,31 @@
     height: 100%;   /* Ensure it takes up the full height */
   }
   
+
+  .book-card {
+    position: relative;
+    width: 150px; /* Adjust as per your design */
+    height: 230px; /* Adjust as per your design */
+  }
+  
+  .book-cover-full {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .finished-indicator {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background-color: green;
+    color: white;
+    border-radius: 50%;
+    width: 25px;
+    height: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 18px;
+    font-weight: bold;
+  }
+  
