--- a/frontend/src/styles/HomePage.css
+++ b/frontend/src/styles/HomePage.css
@@ -5,4 +5,5 @@
     font-size: 2.5rem;
     font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 100px 0 50px 0;
 }
